--- a/CardCode/Base.lproj/Main_iPhone.storyboard
+++ b/CardCode/Base.lproj/Main_iPhone.storyboard
@@ -103,7 +103,7 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Your barcodes" id="CjE-d5-mo1">
-                        <barButtonItem key="leftBarButtonItem" image="info" style="plain" id="Fot-87-XrM">
+                        <barButtonItem key="leftBarButtonItem" image="info" id="Fot-87-XrM">
                             <connections>
                                 <segue destination="V5o-IH-MCd" kind="push" id="3kh-sJ-JJn"/>
                             </connections>
@@ -133,15 +133,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Place your barcode here" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" id="kAe-Br-RRs">
-                                <rect key="frame" x="30" y="379" width="260" height="69"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                <color key="textColor" red="0.11219684043833252" green="0.89245074728260865" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <view contentMode="scaleAspectFit" id="iiZ-3R-HQ5" customClass="KXRectView">
-                                <rect key="frame" x="10" y="140" width="300" height="200"/>
+                                <rect key="frame" x="85" y="120" width="150" height="310"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
@@ -152,8 +145,6 @@
                     <tabBarItem key="tabBarItem" title="Scan" image="second" id="Z7h-1E-pvt"/>
                     <navigationItem key="navigationItem" title="Scan new barcode" id="T7h-BW-hQi"/>
                     <connections>
-                        <outlet property="decodedLabel" destination="kAe-Br-RRs" id="SRx-cO-GcL"/>
-                        <outlet property="labelText" destination="kAe-Br-RRs" id="Abn-4M-OYo"/>
                         <outlet property="scanRectView" destination="iiZ-3R-HQ5" id="4ih-75-WLl"/>
                         <segue destination="Vn3-OM-bNh" kind="unwind" identifier="unwindFromScanToSelection" unwindAction="unwindToThisViewController:" id="fQ6-8c-HQz"/>
                     </connections>
@@ -171,28 +162,28 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Front" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ttC-JI-QF2">
-                                <rect key="frame" x="59" y="81" width="42" height="20"/>
+                                <rect key="frame" x="59" y="80" width="42" height="20"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Back" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="4WW-am-2cD">
-                                <rect key="frame" x="218" y="81" width="42" height="21"/>
+                                <rect key="frame" x="218" y="80" width="42" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6gH-HD-X8J">
-                                <rect key="frame" x="0.0" y="290" width="320" height="30"/>
+                                <rect key="frame" x="0.0" y="270" width="320" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Cc0-V9-Bdo">
-                                <rect key="frame" x="5" y="120" width="150" height="150"/>
+                                <rect key="frame" x="5" y="105" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <state key="normal" image="plus">
@@ -204,8 +195,8 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="aKa-ra-uoN">
-                                <rect key="frame" x="10" y="330" width="300" height="130"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                <rect key="frame" x="60" y="305" width="200" height="100"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Barcode image">
                                     <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -215,7 +206,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="d66-VK-uca">
-                                <rect key="frame" x="170" y="120" width="150" height="150"/>
+                                <rect key="frame" x="170" y="105" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                 <state key="normal" image="plus">
@@ -246,25 +237,10 @@
         <scene sceneID="qOd-wL-PuY">
             <objects>
                 <viewController id="Da3-0M-UIX" customClass="KXBarcodeDisplayController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ov0-x4-0RR">
+                    <view key="view" contentMode="center" id="Ov0-x4-0RR">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" maximumZoomScale="5" bouncesZoom="NO" id="Lnl-Sz-v7j">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <imageView multipleTouchEnabled="YES" contentMode="scaleAspectFit" id="CNJ-At-9cK">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                    </imageView>
-                                </subviews>
-                                <connections>
-                                    <outlet property="delegate" destination="Da3-0M-UIX" id="wCL-IK-ZQp"/>
-                                </connections>
-                            </scrollView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" alpha="0.79999999999999982" contentMode="scaleToFill" id="Foo-ho-5aN">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -284,12 +260,28 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" minimumZoomScale="0.40000000000000002" maximumZoomScale="5" bouncesZoom="NO" id="Lnl-Sz-v7j">
+                                <rect key="frame" x="0.0" y="44" width="320" height="392"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <imageView multipleTouchEnabled="YES" contentMode="scaleAspectFit" id="CNJ-At-9cK">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="392"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </imageView>
+                                </subviews>
+                                <connections>
+                                    <outlet property="delegate" destination="Da3-0M-UIX" id="wCL-IK-ZQp"/>
+                                </connections>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="Zfa-bv-pxh"/>
                     <connections>
                         <outlet property="imageView" destination="CNJ-At-9cK" id="yiK-vA-0QN"/>
+                        <outlet property="scrollView" destination="Lnl-Sz-v7j" id="dn3-dv-0gB"/>
                         <outlet property="titleToolbar" destination="pPE-uX-agW" id="KXm-NL-Ydo"/>
                         <outlet property="toolbar" destination="Foo-ho-5aN" id="MOj-Bj-GWG"/>
                     </connections>
